--- a/src/app/screens/home/home.component.html
+++ b/src/app/screens/home/home.component.html
@@ -152,28 +152,22 @@
             </div>
             <div class="d_body">
                 <div class="d_card">
-                    <div class="d_c_info">
+                    <div class="icon">
                         <img src="../../assets/icons/android.svg" alt="android">
-                        <span>Motorola</span>
                     </div>
-                    <span>Motorola Edge 30</span>
-                    <div class="status" [class.active]="true"></div>
-                </div>
-                <div class="d_card">
-                    <div class="d_c_info">
-                        <img src="../../assets/icons/android.svg" alt="android">
-                        <span>Motorola</span>
+                    <div class="d_details">
+                        <div class="name">Motorola Edge 30</div>
+                        <span>Total Sent Messages: <span>300</span></span>
                     </div>
-                    <span>Motorola Edge 30</span>
-                    <div class="status" [class.active]="true"></div>
-                </div>
-                <div class="d_card">
-                    <div class="d_c_info">
-                        <img src="../../assets/icons/android.svg" alt="android">
-                        <span>Motorola</span>
+                    <div class="percentage">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="10" viewBox="0 0 14 10" fill="none">
+                            <path
+                                d="M5.45709 0.742473C6.25706 -0.227435 7.74294 -0.227435 8.54291 0.742473L12.9611 6.09923C14.037 7.40371 13.1091 9.3718 11.4182 9.3718H2.58183C0.890891 9.3718 -0.0370021 7.40371 1.03892 6.09923L5.45709 0.742473Z"
+                                fill="#3CD856" />
+                        </svg>
+                        <span>23%</span>
                     </div>
-                    <span>Motorola Edge 30</span>
-                    <div class="status" [class.active]="false"></div>
+                    <div class="d_badge">Active</div>
                 </div>
             </div>
         </div>
