--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -123,12 +123,12 @@
             </a>
         </ul>
 
-        <div class="pro">
+        <!-- <div class="pro">
             <img src="../../../assets/img/pro.png" alt="">
             <h2>Taxi Messages</h2>
             <p>Get access to all features on tetumbas</p>
             <button><span>Get Pro</span></button>
-        </div>
+        </div> -->
 
         <button (click)="toggleNavbar()" class="toggle">
             <img src="../../../assets/img/toggle.png" alt="toggle">
