--- a/src/app/screens/messages/messages.component.html
+++ b/src/app/screens/messages/messages.component.html
@@ -2,6 +2,9 @@
     <!-- <app-messages-sidebar></app-messages-sidebar> -->
     <div>
         <div class="tabs">
+            <div class="heading">
+                Message Types
+            </div>
             <div class="tab" [class.active]="tab === 'booking'" (click)="openMessageList('booking')">Booking</div>
             <div class="tab" [class.active]="tab === 'tracking'" (click)="openMessageList('tracking')">Tracking</div>
             <div class="tab" [class.active]="tab === 'arrived'" (click)="openMessageList('arrived')">Arrived</div>
@@ -22,19 +25,6 @@
     <div class="right">
         <div class="top" style="margin-top: 0;">
             <h1><span style="text-transform: capitalize;">{{currentList}}</span> Messages For WhatsApp</h1>
-            <!-- <button>
-            <svg xmlns="http://www.w3.org/2000/svg" width="21" height="14" viewBox="0 0 21 14" fill="none">
-                <path d="M2 1.79065H18.67M5.12556 7.00002H15.5443M9.29302 12.2094H11.3768" stroke="white"
-                    stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
-            </svg>
-            <span>
-                View All Messages
-            </span>
-            <svg xmlns="http://www.w3.org/2000/svg" width="21" height="20" viewBox="0 0 21 20" fill="none">
-                <path d="M6.50342 8.33337L10.6701 12.5L14.8367 8.33337" stroke="white" stroke-width="1.5"
-                    stroke-linecap="round" stroke-linejoin="round" />
-            </svg>
-        </button> -->
         </div>
         <div class="instance_grid">
             <div class="instance_card"
@@ -54,7 +44,8 @@
                     </div>
                     <!-- <textarea [disabled]="!instance.isEditable" [(ngModel)]="instance.value"
                         (ngModelChange)="onTextAreaChange(instance, $event)" placeholder="Type here..."></textarea> -->
-                    <textarea value="instance" placeholder="Type here..."></textarea>
+                    <textarea value="instance" placeholder="Type here..."
+                        [readonly]="currentMessageList[i].isEditable"></textarea>
                 </div>
             </div>
         </div>
