--- a/src/app/screens/customers/customers.component.css
+++ b/src/app/screens/customers/customers.component.css
@@ -156,9 +156,7 @@
     top: 50%;
     transform: translateY(-50%);
     right: 1rem;
-    padding: 1rem;
-    height: 35px;
-    width: 35px;
+    padding: .6rem 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
