--- a/src/app/screens/customers/customers.component.html
+++ b/src/app/screens/customers/customers.component.html
@@ -44,6 +44,9 @@
                 <div class="th_item">
                     Actions
                 </div>
+                <div class="th_item">
+                    <span style="opacity: 0;">view</span>
+                </div>
             </div>
             <div *ngIf="loading"
                 style="height: 100px; width: 100%; display: flex; align-items: center; justify-content: center;">
@@ -98,9 +101,11 @@
                             </button>
                         </div>
                     </div>
-                    <button class="toggle_more" (click)="selectCustomer(customer)">
-                        {{selectedCustomer === customer.user_name ? "Hide" : "Show"}}
-                    </button>
+                    <div class="th_item">
+                        <button class="toggle_more" (click)="selectCustomer(customer)">
+                            {{selectedCustomer === customer.user_name ? "Hide" : "Show"}}
+                        </button>
+                    </div>
                 </div>
                 <div class="booking_dets_wrapper" [class.active]="selectedCustomer === customer.user_name">
                     <div class="customer-details">
