--- a/src/app/screens/bookings/bookings.component.html
+++ b/src/app/screens/bookings/bookings.component.html
@@ -59,7 +59,7 @@
                         <input type="checkbox" [checked]="booking.selected">
                     </div>
                     <div class="th_item">
-                        {{booking.createdAt | date }}, {{booking.createdAt | date:'hh:mm a' }}
+                        {{booking.createdAt | date }}, {{booking.createdAt | date:'HH:mm a' }}
                     </div>
                     <div class="th_item">
                         {{booking.booking_id}}
