--- a/src/app/screens/bookings/bookings.component.html
+++ b/src/app/screens/bookings/bookings.component.html
@@ -1,8 +1,38 @@
 <div class="container">
+    <div *ngIf="showBanner" class="top">
+        <div class="top_t">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                <path
+                    d="M9 5H11V7H9V5ZM10 15C10.55 15 11 14.55 11 14V10C11 9.45 10.55 9 10 9C9.45 9 9 9.45 9 10V14C9 14.55 9.45 15 10 15ZM10 0C4.48 0 0 4.48 0 10C0 15.52 4.48 20 10 20C15.52 20 20 15.52 20 10C20 4.48 15.52 0 10 0ZM10 18C5.59 18 2 14.41 2 10C2 5.59 5.59 2 10 2C14.41 2 18 5.59 18 10C18 14.41 14.41 18 10 18Z"
+                    fill="#636364" />
+            </svg>
+            <span>Import Message</span>
+        </div>
+        <p>
+            Please note that “not sent” , might be because target is not valid mobile or international number or your
+            settings are configured not be send this Message type by SMS.
+            <br>
+            <br>
+            Device sending is limited to avoid bans , these limits are gradually reduced to mitigate that risk.
+        </p>
+        <button (click)="this.showBanner = false">
+            <svg xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 11 11" fill="none">
+                <path d="M9.9751 9.675L0.892618 1.32498M9.9751 1.32498L0.892618 9.675" stroke="#2EBC96"
+                    stroke-width="1.2975" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+        </button>
+    </div>
     <div class="header">
-        <div class="kanban">Chatbot <strong> / Bookings</strong></div>
         <div class="header_more">
             <div class="menu">
+                <button (click)="this.showBanner = true"
+                    style="width: fit-content; height: fit-content; display: flex; justify-content: center; align-items: center; padding: 0; align-self: center; border: none; outline: none; background-color: transparent; cursor: pointer;">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                        <path
+                            d="M9 5H11V7H9V5ZM10 15C10.55 15 11 14.55 11 14V10C11 9.45 10.55 9 10 9C9.45 9 9 9.45 9 10V14C9 14.55 9.45 15 10 15ZM10 0C4.48 0 0 4.48 0 10C0 15.52 4.48 20 10 20C15.52 20 20 15.52 20 10C20 4.48 15.52 0 10 0ZM10 18C5.59 18 2 14.41 2 10C2 5.59 5.59 2 10 2C14.41 2 18 5.59 18 10C18 14.41 14.41 18 10 18Z"
+                            fill="#636364" />
+                    </svg>
+                </button>
                 <button (click)="setCurrentItem(item)" *ngFor="let item of menuItems" class="menu_item"
                     [class.active]="item.name === currentItem.name">
                     <div class="icon">{{item.icon}}</div>
@@ -11,7 +41,7 @@
             </div>
             <div class="search">
                 <img src="../../assets/icons/search.svg" alt="">
-                <input type="search" placeholder="Search number here...">
+                <input type="number" placeholder="Search number here...">
             </div>
         </div>
     </div>
@@ -101,7 +131,7 @@
                                     </div>
                                     <h3>£{{currentBookingDetails.payment.total | number: '1.2-2'}}</h3>
                                 </div>
-                                <div class="bd_dets">
+                                <div class="bd_dets" style="background-color: transparent;">
                                     <div>
                                         <span>Booking Name</span>
                                         <span>{{booking.user_name}}</span>
