--- a/src/app/screens/chat-flow/chat-flow.component.css
+++ b/src/app/screens/chat-flow/chat-flow.component.css
@@ -1,6 +1,7 @@
 .container {
     display: flex;
     flex-direction: column;
+    position: relative;
 }
 
 .header {
@@ -553,4 +554,70 @@
     border-radius: 8px;
     resize: none;
     padding: 10px;
+}
+
+.fixed_menu {
+    background-color: red;
+    z-index: 99999999999;
+    position: absolute;
+    top: 2rem;
+    right: 2rem;
+    border-radius: 50px;
+    border: 1px solid #EEE;
+    background: #FFF;
+    box-shadow: 0px 0px 10px 0px rgba(46, 188, 150, 0.20);
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.2rem;
+    height: calc(65px + 2rem);
+    overflow: hidden;
+}
+
+.fm_active {
+    height: fit-content;
+}
+
+.fm_toggle {
+    width: 65px;
+    height: 65px;
+    flex-shrink: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    cursor: pointer;
+    background: linear-gradient(270deg, #2EBC96 0%, #1A9096 100%);
+    border: none;
+    outline: none;
+    border-radius: 65px;
+    margin-bottom: .7rem;
+    gap: .5rem;
+}
+
+.fm_toggle>div {
+    height: 2px;
+    width: 60%;
+    background-color: white;
+}
+
+.fm_sub {
+    width: 45px;
+    height: 45px;
+    flex-shrink: 0;
+    border-radius: 45px;
+    border: none;
+    outline: none;
+    background: linear-gradient(0deg, #979797 0%, #979797 100%), linear-gradient(270deg, #2EBC96 0%, #1A9096 100%);
+    color: white;
+    font-size: 1.5rem;
+    cursor: pointer;
+    font-weight: 400;
+    position: absolute;
+    top: 100%;
+}
+
+.fm_active>.fm_sub {
+    position: static;
 }
