--- a/src/app/screens/chat-flow/chat-flow.component.html
+++ b/src/app/screens/chat-flow/chat-flow.component.html
@@ -1,11 +1,19 @@
-<div class="container">
-    <div class="header">
+<div class="container" style="background: rgba(46, 188, 150, 0.10);">
+    <div class="fixed_menu" (click)="fixedMenuToggled = !fixedMenuToggled" [class.fm_active]="fixedMenuToggled">
+        <button class="fm_toggle">
+            <div></div>
+            <div></div>
+        </button>
+        <button [class.show_fms]="fixedMenuToggled" class="fm_sub">+</button>
+        <button [class.show_fms]="fixedMenuToggled" class="fm_sub">-</button>
+    </div>
+    <!-- <div class="header">
         <div class="kanban">Chatbot <strong> / Chat Flow</strong></div>
         <button>
             <img src="../../../assets/save.png">
             <span>Save Changes</span>
         </button>
-    </div>
+    </div> -->
     <div class="canvas_wrapper">
         <div *ngIf="selectedCard" class="edit_card">
             <textarea class="e_card_title" rows="1" [value]="selectedCard?.title"></textarea>
