--- a/src/app/screens/customers/customers.component.css
+++ b/src/app/screens/customers/customers.component.css
@@ -180,7 +180,7 @@
     gap: 1.5rem;
     padding: .75rem;
     border-radius: .6rem;
-    background: #FFF;
+    background: #eee;
     box-shadow: 0px 5px 22px 0px rgba(225, 224, 224, 0.90);
 }
 
@@ -197,7 +197,7 @@
     flex-direction: column;
     gap: 1rem;
     border-radius: 8px;
-    background: #EEE;
+    /* background: #EEE; */
     min-width: 300px;
 }
 
@@ -331,4 +331,39 @@
 .booking_dets_wrapper.active {
     grid-template-rows: 1fr;
     margin: 0;
+}
+
+.th_item.searchable {
+    display: flex;
+    align-items: center;
+    gap: .75rem;
+}
+
+.searchable img {
+    object-fit: contain;
+    cursor: pointer;
+}
+
+.searchable.active {
+    gap: .25rem;
+    box-shadow: 0 0 5px #3335403f;
+    padding: .5rem;
+    margin: 1rem;
+    border-radius: .8rem;
+    position: relative;
+}
+
+.searchable.active input {
+    border: none;
+    outline: none;
+    background-color: transparent;
+    border-bottom: 1px solid #333;
+    padding: .5rem;
+    padding-right: 1.5rem;
+}
+
+.tsa_search {
+    position: absolute;
+    right: 1.5rem;
+
 }
