--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -3,9 +3,8 @@
         <h1>{{title}}</h1>
         <div class="kanban">Home / Messages</div>
     </div>
-    <div class="middle">
+    <!-- <div class="middle">
         <div class="search">
-            <!-- <img src="../../../assets/icons/search.svg" alt=""> -->
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
                 <path
                     d="M23.414 21.0861L18.337 16.0091C19.386 14.4281 20 12.5351 20 10.5001C20 4.98612 15.514 0.500122 10 0.500122C4.486 0.500122 0 4.98612 0 10.5001C0 16.0141 4.486 20.5001 10 20.5001C12.035 20.5001 13.928 19.8861 15.509 18.8371L20.586 23.9141C21.366 24.6951 22.634 24.6951 23.414 23.9141C24.195 23.1331 24.195 21.8671 23.414 21.0861ZM3 10.5001C3 6.64012 6.14 3.50012 10 3.50012C13.86 3.50012 17 6.64012 17 10.5001C17 14.3601 13.86 17.5001 10 17.5001C6.14 17.5001 3 14.3601 3 10.5001Z"
@@ -20,7 +19,7 @@
             </svg>
             <input type="search" placeholder="Search here..." />
         </div>
-    </div>
+    </div> -->
     <div *ngIf="loading" style="margin-left: auto;">
         <app-loader></app-loader>
     </div>
